--- a/ISLT_4355/introHTML_GrapyToad.html
+++ b/ISLT_4355/introHTML_GrapyToad.html
@@ -12,6 +12,9 @@
     Things that I enjoy doing in my free time include playing video-games and watching shows such as Arcane or Breaking Bad.
     I also play games such as Super Smash Brothers competitively, and play the card game Magic: The Gathering. 
     I have taken one Information Systems and Learning Technologies class before this one, so I am excited to see what I will learn in this class in comparison to the one I took last semester.
-
+    I took web development through the IT courses at Mizzou. It went over HTML and CSS, but focused mainly on the languages used within them, such as Java-Script and PHP.
+    I am expecting to go into depth on HTML and CSS, and I am excited because I liked those languages the most in the previous development class I took.
+    I will hope that these new skills will show my competency in web development and may open doors for jobs in the future.
+    I enjoy playing video-games and card games such as Magic: The Gathering. I play plenty of Super Smash Brothers, if anyone ever wanted to play.
 </body>
 </html>
