--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -13,22 +13,26 @@ Author:  Grady Todd
 
 School/Term:  University of Missouri, Summer 2022
 
-Developed: June 14, 2022
+Developed: June 16, 2022
 
 ******************************************************************************
 
 -->
                <meta charset="utf-8">
-               <title>About Page</title>
+               <title>About Me</title>
 </head>
 
 <body>
-    <h1>
-        Grady Todd
-    </h1>
-    <h3>
-        About Me
-    </h3>
+    <header>
+        <nav></nav>
+        <h1>
+            Grady Todd
+        </h1>
+        <h3>
+            About Me
+        </h3>
+    </header>
+<main>
     <p>
         I am a graduate from the <em>University of Missouri</em> with a bachelor’s degree in <em>Information Technology</em>.
         I also acquired my cyber security certificate for completing the needed coursework in cyber security.
@@ -44,5 +48,8 @@ Developed: June 14, 2022
     <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
         “Anyone who has never made a mistake has never tried anything new.”
     </blockquote>
+</main>
+<footer>
+</footer>
 </body>
 </html>
