--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -20,6 +20,7 @@ Developed: June 16, 2022
 -->
                <meta charset="utf-8">
                <title>Home Page</title>
+               <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
