--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
 <head>
 <!--
+    Yo, this is Grady. How are my coding buddies doing?
+    My question so far is how old are you guys? This class seems to have plenty of older people than me, being that I'm only 22.
+-->
+<!--
 
 *****************************************************************************
 
@@ -48,6 +52,7 @@ Developed: June 16, 2022
     <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
         “Anyone who has never made a mistake has never tried anything new.”
     </blockquote>
+    <img src="Images/Resume-Grady-Todd6-10-22.pdf" alt="Resume">
 </main>
 <footer>
 </footer>
