--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -28,7 +28,13 @@ Developed: June 16, 2022
 
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="project.html">Projects</a>
+            </ul>
+        </nav>
         <h1>
             Grady Todd
         </h1>
