--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -24,7 +24,13 @@ Developed: June 16, 2022
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="project.html">Projects</a>
+            </ul>
+        </nav>
         <h1>About Me</h1>
     </header>
 
