--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -24,15 +24,17 @@ Developed: June 16, 2022
 -->
                <meta charset="utf-8">
                <title>About Me</title>
+               <link rel="stylesheet" href="style.css">
+               <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="project.html">Projects</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Projects</a></li>
             </ul>
         </nav>
         <h1>
