--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -21,14 +21,15 @@ Developed: June 16, 2022
                <meta charset="utf-8">
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
+               <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="project.html">Projects</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Projects</a></li>
             </ul>
         </nav>
         <h1>About Me</h1>
