--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -30,11 +30,18 @@ Developed: June 16, 2022
 
 <body>
     <header>
-        <nav>
+        <nav class="dropdown">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li class="dropbtn">
+                    <a href="project.html">Projects</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <h1>
