--- a/ISLT_4355/project.html
+++ b/ISLT_4355/project.html
@@ -20,7 +20,7 @@ Developed: June 16, 2022
 
 -->
                <meta charset="utf-8">
-               <title>About Me</title>
+               <title>Projects</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
 </head>
