--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -25,19 +25,19 @@ Developed: June 16, 2022
 </head>
 <body>
     <header>
-        <nav class="dropdown">
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li class="dropbtn">
-                    <a href="project.html">Projects</a>
-                    <ul class="dropdown-content">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
+                <li class="dropdown">
+                  <a href="project.html" class="dropbtn">Projects</a>
+                  <ul class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </ul>
                 </li>
-            </ul>
+              </ul>
         </nav>
         <h1>About Me</h1>
     </header>
