--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -67,9 +67,12 @@ Developed: June 16, 2022
     <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
         “Anyone who has never made a mistake has never tried anything new.”
     </blockquote>
-    <img src="Resume-Grady-Todd6-10-22.pdf" alt="Resume">
+    <h2 class="ResumeLink">
+        <a href="Resume-Grady-Todd6-10-22.pdf" alt="Resume">Resume</a>
+    </h2>
 </main>
 <footer>
+    <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
 </footer>
 </body>
 </html>
