--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -15,6 +15,8 @@ School/Term:  University of Missouri, Summer 2022
 
 Developed: June 16, 2022
 
+Updated: July 3, 2022
+
 ******************************************************************************
 
 -->
@@ -37,6 +39,8 @@ Developed: June 16, 2022
                     <a href="#">Link 3</a>
                   </ul>
                 </li>
+                <li><a href="reflection.html">Reflection</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
         </nav>
         <h1>About Me</h1>
