--- a/ISLT_4355/project.html
+++ b/ISLT_4355/project.html
@@ -14,7 +14,9 @@ Author:  Grady Todd
 
 School/Term:  University of Missouri, Summer 2022
 
-Developed: June 16, 2022
+Developed: July 1, 2022
+
+Updated: July 3, 2022
 
 ******************************************************************************
 
@@ -39,6 +41,8 @@ Developed: June 16, 2022
                     <a href="#">Link 3</a>
                   </ul>
                 </li>
+                <li><a href="reflection.html">Reflection</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
         </nav>
     </header>
