--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -48,32 +48,43 @@ Updated: July 3, 2022
                 <li><a href="#">Contact</a></li>
               </ul>
         </nav>
-        <h1>
-            Grady Todd
-        </h1>
-        <h3>
-            About Me
-        </h3>
     </header>
 <main>
-    <p>
-        I am a graduate from the <em>University of Missouri</em> with a bachelor’s degree in <em>Information Technology</em>.
-        I also acquired my cyber security certificate for completing the needed coursework in cyber security.
-        I have a down to earth learning method, where being shown is the best way for me to absorb the information.<br>
-        <br>
-        I am currently interning at <b>Veterans United Home Loans</b>, where I am part of the Incident Response team in security.
-        I oversee monitoring reported emails and searching them to ensure that there is nothing malicious
-        within them. With the education and work experience, I have collected skills such as working with virtual
-        machines, sandboxes, coding in various languages such as Python and HTML, and working with teams of
-        individuals, making me realize I am more of a team player than I had thought.
-    </p>
-
-    <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
-        “Anyone who has never made a mistake has never tried anything new.”
-    </blockquote>
-    <h2 class="ResumeLink">
-        <a href="Resume-Grady-Todd6-10-22.pdf" alt="Resume">Resume</a>
-    </h2>
+    <div class="bigimg">
+        <img id="column" src="UMColumns.jpeg" alt="Columns">
+    </div>
+    <div class="row">
+        <div class="side">
+          <div><img class="image" src="headshot.JPG" alt="headshot"></div>
+          <div><img class="image" src="VULogo.jpeg" alt="logo"></div>
+        </div>
+        <div class="main">
+            <h1>
+                Grady Todd
+            </h1>
+            <h3>
+                About Me
+            </h3>
+            <p>
+                I am a graduate from the <em>University of Missouri</em> with a bachelor’s degree in <em>Information Technology</em>.
+                I also acquired my cyber security certificate for completing the needed coursework in cyber security.
+                I have a down to earth learning method, where being shown is the best way for me to absorb the information.<br>
+                <br>
+                I am currently interning at <b>Veterans United Home Loans</b>, where I am part of the Incident Response team in security.
+                I oversee monitoring reported emails and searching them to ensure that there is nothing malicious
+                within them. With the education and work experience, I have collected skills such as working with virtual
+                machines, sandboxes, coding in various languages such as Python and HTML, and working with teams of
+                individuals, making me realize I am more of a team player than I had thought.
+            </p>
+        
+            <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
+                “Anyone who has never made a mistake has never tried anything new.”
+            </blockquote>
+            <h2 class="ResumeLink">
+                <a href="Resume-Grady-Todd6-10-22.pdf" alt="Resume">Resume</a>
+            </h2>
+        </div>
+      </div>
 </main>
 <footer>
     <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
