--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -21,6 +21,7 @@ Updated: July 3, 2022
 
 -->
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
@@ -43,21 +44,27 @@ Updated: July 3, 2022
                 <li><a href="#">Contact</a></li>
               </ul>
         </nav>
-        <h1>About Me</h1>
     </header>
 
     <main>
-        <h3>
-            Hey, I’m Grady Todd and I’m a University of Missouri graduate in the field of Information Technology. I am searching for hiring opportunities in the field 
-            of Information Technology and Cyber Security, but I am open to any and all experiences to further my education in technology.
-        </h3>
-        <p>
-            This website is for my portfolio to be displayed. This will contain all my experiences and past projects that I have worked on. It will also give a look into 
-my hobbies and interests, something that will make me more personable. Attempting to find a comfortable mix between professional and personal content, this portfolio 
-will be a sneak-peak into myself. Some goals of this website are to show my personality and experiences, while also showing my work ethic and some things that I 
-am passionate about. Hopefully when someone views it, they will be able to view my resume and determine where I have been and done, and that will lead to them 
-reaching out or getting back to me about an application.  
-        </p>
+        <div class="bigimg">
+            <img id="column" src="headshot.JPG" alt="Headshot">
+        </div>
+        <div class="indexcontainer">
+            <div class="rowindex">
+                <h3>
+                    Hey, I’m Grady Todd and I’m a University of Missouri graduate in the field of Information Technology. I am searching for hiring opportunities in the field 
+                    of Information Technology and Cyber Security, but I am open to any and all experiences to further my education in technology.
+                </h3>
+                <p>
+                    This website is for my portfolio to be displayed. This will contain all my experiences and past projects that I have worked on. It will also give a look into 
+        my hobbies and interests, something that will make me more personable. Attempting to find a comfortable mix between professional and personal content, this portfolio 
+        will be a sneak-peak into myself. Some goals of this website are to show my personality and experiences, while also showing my work ethic and some things that I 
+        am passionate about. Hopefully when someone views it, they will be able to view my resume and determine where I have been and done, and that will lead to them 
+        reaching out or getting back to me about an application.  
+                </p>
+            </div>
+          </div>
     </main>
 
 <footer>
