--- a/ISLT_4355/project.html
+++ b/ISLT_4355/project.html
@@ -22,6 +22,7 @@ Updated: July 3, 2022
 
 -->
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
                <title>Projects</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
@@ -47,6 +48,28 @@ Updated: July 3, 2022
         </nav>
     </header>
 <main>
+    <div class="bigimg">
+        <p id="column">My Projects</p>
+    </div>
+    <div class="row">
+      </div>
+      <div class="grid-container-project">
+        <div class="grid-item-project"><img class="image" src="cnslogo.png" alt="Headshot"></div>
+        <div class="grid-item-project"><p class="reflection"> My senior capstone project. This project was to develop a web page for a nursery in Columbia. My team consisted of 4 other members
+            that were to work together to develop this page. This was a final class for my IT degree and was difficult at times but gave needed experience
+            in working with a team professionally. I will use screen grabs and the website to display what I incorporated and display what were the biggest challenges.
+        </p></div>
+        <div class="grid-item-project"><p class="reflection">One of my goals is to get a job in the cyber security field. I will display my qualifications and skills related to the goal. 
+            I will use my resume and experience with VMs and Linux to display competencies within the field. I will also explain the important of passwords
+            and incorporating the use of a password manager.</p></div>
+        <div class="grid-item-project"><img class="image" src="Kalilogo.png" alt="VULogo"></div>
+        <div class="grid-item-project"><img class="image" src="VULogosmall.jpeg" alt=""></div>
+        <div class="grid-item-project"><p class="reflection">Summer internship in security. This summer I spent at Veterans United on the security team. I was part of the incident response team
+            that ensured the company was up to date on security protocols, with me overseeing the functionality of our “Protect this house” button. I will 
+            show my competencies in software used at the company, and speak on my growth there as an employee, with the constant influx of knowledge needing 
+            to be acquired to not fall behind at the job. </p></div>  
+      </div>
+
 </main>
 <footer>
     <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
