--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -25,6 +25,7 @@ Updated: July 3, 2022
 
 -->
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
                <title>About Me</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
@@ -81,7 +82,7 @@ Updated: July 3, 2022
                 “Anyone who has never made a mistake has never tried anything new.”
             </blockquote>
             <h2 class="ResumeLink">
-                <a href="Resume-Grady-Todd6-10-22.pdf" alt="Resume">Resume</a>
+                <a href="Resume-Grady-Todd6-10-22.pdf">Resume</a>
             </h2>
         </div>
       </div>
