--- a/ISLT_4355/reflection.html
+++ b/ISLT_4355/reflection.html
@@ -21,6 +21,7 @@ Updated: July 3, 2022
 
 -->
                <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
@@ -43,33 +44,46 @@ Updated: July 3, 2022
                 <li><a href="#">Contact</a></li>
               </ul>
         </nav>
-        <h1>Reflection</h1>
     </header>
 
     <main>
-        <p id="first">
-            I am currently looking for a full-time position. I am looking between companies such as Veterans United Home Loans and Cerner or newly changed to Oracle. Both
-            pique my interest, since location does not mean the most to me. I would like to either stay in Columbia or move to Kansas City. Many people that I already know are in
-            Columbia or Kansas City, so I am now working on finding a position in either of these locations. This page shows what I have done thus far in my professional career. 
-        </p>
-        <p class="reflection">
-            I began at the University of Missouri undeclared and found a home in Information Technology. I was unsure where to go, but my constant problem-solving
-            and wanting to keep up to date on new software allowed me to venture to IT. My freshman year was filled with new coursework, between gen eds and the
-            core curriculum for IT. This year let me feel out if I really wanted to pursue this field of education.
-        </p>
-        <p class="reflection">
-            My following years led me to adjust to IT with some difficult but interesting courses on the way. Sticking to the program, 
-            I found myself at my senior year with my senior capstone looming over me. This was a way that the school could see me put my education to the test, and I 
-            had a team with me to develop a website to show the faculty. Through hard work and communication, we finished the project and could stand by something that 
-            we felt proud of. This was a great way to end my college career, as it gave me experience with working with teams.
-        </p>
-        <p class="reflection">
-            After graduation, I began an internship at Veterans United Home Loans. I was tasked on the security team to help the incident response team. 
-            I viewed reported emails and determined if they held malicious content or if they were good to open and view. This could easily relate and help me acquire a 
-            job in the security field in the future, something that is a personal goal of mine. After going to the University of Missouri for Information Technology, a 
-            job in cyber security would be the most rewarding thing that I could receive. 
-  
-        </p>
+     <div class="reflectioncontainer">
+            <div class="box">
+                <p class="relfection">
+                <img class="logo" src="cernerlogo.jpeg" alt="Cerner Logo">
+                I am currently looking for a full-time position. I am looking between companies such as Veterans United Home Loans and Cerner or newly changed to Oracle. Both
+                pique my interest, since location does not mean the most to me. I would like to either stay in Columbia or move to Kansas City. Many people that I already know are in
+                Columbia or Kansas City, so I am now working on finding a position in either of these locations. This page shows what I have done thus far in my professional career. 
+                </p>
+            </div>
+            <div class="box">
+                <p class="reflection">
+                <img class="logo" src="MULogo.webp" alt="MU Logo">
+                I began at the University of Missouri undeclared and found a home in Information Technology. I was unsure where to go, but my constant problem-solving
+                and wanting to keep up to date on new software allowed me to venture to IT. My freshman year was filled with new coursework, between gen eds and the
+                core curriculum for IT. This year let me feel out if I really wanted to pursue this field of education.
+                </p>
+            </div>
+            <div class="box">
+                <p class="reflection">
+                <img class="logo" src="muitlogo.png" alt="MU IT">
+                My following years led me to adjust to IT with some difficult but interesting courses on the way. Sticking to the program, 
+                I found myself at my senior year with my senior capstone looming over me. This was a way that the school could see me put my education to the test, and I 
+                had a team with me to develop a website to show the faculty. Through hard work and communication, we finished the project and could stand by something that 
+                we felt proud of. This was a great way to end my college career, as it gave me experience with working with teams.
+                </p>
+            </div>
+            <div class="box">
+                <p class="reflection">
+                <img class="logo" src="VULogosmall.jpeg" alt="VU Logo">
+                After graduation, I began an internship at Veterans United Home Loans. I was tasked on the security team to help the incident response team. 
+                I viewed reported emails and determined if they held malicious content or if they were good to open and view. This could easily relate and help me acquire a 
+                job in the security field in the future, something that is a personal goal of mine. After going to the University of Missouri for Information Technology, a 
+                job in cyber security would be the most rewarding thing that I could receive. 
+                </p>
+            </div>
+        </div>
+    </div>
     </main>
 
 <footer>
