--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -25,6 +25,12 @@ Updated: July 3, 2022
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
+                <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+                <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+                <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+                <link rel="manifest" href="/site.webmanifest">
+                <meta name="msapplication-TileColor" content="#da532c">
+                <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
@@ -68,7 +74,10 @@ Updated: July 3, 2022
     </main>
 
 <footer>
-    <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
+    <div class="footercontainer">
+        <p><img class="favicon" src="Images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="Images/faviconmail.ico">ghueytodd@gmail.com</p>
+        <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
+    </div>
 </footer>
 </body>
 </html>
