--- a/ISLT_4355/index.html
+++ b/ISLT_4355/index.html
@@ -75,7 +75,7 @@ Updated: July 3, 2022
 
 <footer>
     <div class="footercontainer">
-        <p><img class="favicon" src="Images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="Images/faviconmail.ico">ghueytodd@gmail.com</p>
+        <p><img class="favicon" src="faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="faviconmail.ico">ghueytodd@gmail.com</p>
         <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
     </div>
 </footer>
