--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -29,6 +29,7 @@ Updated: July 3, 2022
                <title>About Me</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
+               <link rel="shortcut icon" type="image/png" href="images/gtlogo.png">
 </head>
 
 <body>
@@ -89,7 +90,10 @@ Updated: July 3, 2022
       </div>
 </main>
 <footer>
-    <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
+    <div class="footercontainer">
+        <p><img class="favicon" src="images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico">ghueytodd@gmail.com</p>
+        <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
+    </div>
 </footer>
 </body>
 </html>
