--- a/ISLT_4355/reflection.html
+++ b/ISLT_4355/reflection.html
@@ -25,6 +25,7 @@ Updated: July 3, 2022
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
+               <link rel="shortcut icon" type="image/png" href="images/gtlogo.png">
 </head>
 <body>
     <header>
@@ -86,8 +87,11 @@ Updated: July 3, 2022
     </div>
     </main>
 
-<footer>
-    <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
-</footer>
+    <footer>
+        <div class="footercontainer">
+            <p><img class="favicon" src="images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico">ghueytodd@gmail.com</p>
+            <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
