--- a/ISLT_4355/project.html
+++ b/ISLT_4355/project.html
@@ -29,7 +29,7 @@ Updated: July 3, 2022
                <link rel="shortcut icon" type="image/png" href="images/gtlogo.png">
 </head>
 
-<body>
+<body class="parallax">
     <header>
         <nav>
             <ul>
@@ -38,9 +38,9 @@ Updated: July 3, 2022
                 <li class="dropdown">
                   <a href="project.html" class="dropbtn">Projects</a>
                   <ul class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="project.html#target1">Project 1</a>
+                    <a href="project.html#target2">Project 2</a>
+                    <a href="project.html#target3">Project 3</a>
                   </ul>
                 </li>
                 <li><a href="reflection.html">Reflection</a></li>
@@ -49,23 +49,23 @@ Updated: July 3, 2022
         </nav>
     </header>
 <main>
-    <div class="bigimg">
-        <p id="column">My Projects</p>
+    <div class="headercontainer">
+        <p id="">My Projects</p>
     </div>
     <div class="row">
       </div>
       <div class="grid-container-project">
         <div class="grid-item-project"><img class="image" src="cnslogo.png" alt="Headshot"></div>
-        <div class="grid-item-project"><p class="reflection"> My senior capstone project. This project was to develop a web page for a nursery in Columbia. My team consisted of 4 other members
+        <div class="grid-item-project"><p class="reflection"><a id="target1"> My senior capstone project.</a> This project was to develop a web page for a nursery in Columbia. My team consisted of 4 other members
             that were to work together to develop this page. This was a final class for my IT degree and was difficult at times but gave needed experience
             in working with a team professionally. I will use screen grabs and the website to display what I incorporated and display what were the biggest challenges.
         </p></div>
-        <div class="grid-item-project"><p class="reflection">One of my goals is to get a job in the cyber security field. I will display my qualifications and skills related to the goal. 
+        <div class="grid-item-project"><p class="reflection"><a id="target2">One of my </a> goals is to get a job in the cyber security field. I will display my qualifications and skills related to the goal. 
             I will use my resume and experience with VMs and Linux to display competencies within the field. I will also explain the important of passwords
             and incorporating the use of a password manager.</p></div>
         <div class="grid-item-project"><img class="image" src="Kalilogo.png" alt="VULogo"></div>
         <div class="grid-item-project"><img class="image" src="VULogosmall.jpeg" alt=""></div>
-        <div class="grid-item-project"><p class="reflection">Summer internship in security. This summer I spent at Veterans United on the security team. I was part of the incident response team
+        <div class="grid-item-project"><p class="reflection"><a id="target3">Summer internship in security.</a> This summer I spent at Veterans United on the security team. I was part of the incident response team
             that ensured the company was up to date on security protocols, with me overseeing the functionality of our “Protect this house” button. I will 
             show my competencies in software used at the company, and speak on my growth there as an employee, with the constant influx of knowledge needing 
             to be acquired to not fall behind at the job. </p></div>  
