--- a/ISLT_4355/reflection.html
+++ b/ISLT_4355/reflection.html
@@ -27,7 +27,7 @@ Updated: July 3, 2022
                <link rel="stylesheet" href="nav.css">
                <link rel="shortcut icon" type="image/png" href="images/gtlogo.png">
 </head>
-<body>
+<body class="parallax">
     <header>
         <nav>
             <ul>
@@ -36,9 +36,9 @@ Updated: July 3, 2022
                 <li class="dropdown">
                   <a href="project.html" class="dropbtn">Projects</a>
                   <ul class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="project.html#target1">Project 1</a>
+                    <a href="project.html#target2">Project 2</a>
+                    <a href="project.html#target3">Project 3</a>
                   </ul>
                 </li>
                 <li><a href="reflection.html">Reflection</a></li>
