--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -60,7 +60,7 @@ Updated: July 3, 2022
           <div><img class="image" src="headshot.JPG" alt="headshot"></div>
           <div><img class="image" src="VULogo.jpeg" alt="logo"></div>
         </div>
-        <div class="main">
+        <div style="font-size: 2vw;" class="main">
             <h1>
                 Grady Todd
             </h1>
@@ -82,7 +82,7 @@ Updated: July 3, 2022
             <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
                 “Anyone who has never made a mistake has never tried anything new.”
             </blockquote>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QPxfBaF9RFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="80%" height="200%" src="https://www.youtube.com/embed/QPxfBaF9RFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2 class="ResumeLink">
                 <a href="Resume-Grady-Todd6-10-22.pdf">Resume</a>
             </h2>
