--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -82,7 +82,7 @@ Updated: July 3, 2022
             <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_109012">
                 “Anyone who has never made a mistake has never tried anything new.”
             </blockquote>
-            <iframe width="80%" height="200%" src="https://www.youtube.com/embed/QPxfBaF9RFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/QPxfBaF9RFU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2 class="ResumeLink">
                 <a href="Resume-Grady-Todd6-10-22.pdf">Resume</a>
             </h2>
@@ -91,7 +91,7 @@ Updated: July 3, 2022
 </main>
 <footer>
     <div class="footercontainer">
-        <p><img class="favicon" src="images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico">ghueytodd@gmail.com</p>
+        <p><img class="favicon" src="images/faviconphone.ico" alt="favicon">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico" alt="favicon">ghueytodd@gmail.com</p>
         <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
     </div>
 </footer>
