--- a/ISLT_4355/reflection.html
+++ b/ISLT_4355/reflection.html
@@ -84,12 +84,11 @@ Updated: July 3, 2022
                 </p>
             </div>
         </div>
-    </div>
     </main>
 
     <footer>
         <div class="footercontainer">
-            <p><img class="favicon" src="images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico">ghueytodd@gmail.com</p>
+            <p><img class="favicon" src="images/faviconphone.ico" alt="favicon">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico" alt="favicon">ghueytodd@gmail.com</p>
             <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
         </div>
     </footer>
