--- a/ISLT_4355/project.html
+++ b/ISLT_4355/project.html
@@ -50,7 +50,7 @@ Updated: July 3, 2022
     </header>
 <main>
     <div class="headercontainer">
-        <p id="">My Projects</p>
+        <p>My Projects</p>
     </div>
     <div class="row">
       </div>
@@ -74,7 +74,7 @@ Updated: July 3, 2022
 </main>
 <footer>
     <div class="footercontainer">
-        <p><img class="favicon" src="images/faviconphone.ico">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico">ghueytodd@gmail.com</p>
+        <p><img class="favicon" src="images/faviconphone.ico" alt="favicon">1+888-888-8888&emsp;<img class="favicon" src="images/faviconmail.ico" alt="favicon">ghueytodd@gmail.com</p>
         <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
     </div>
 </footer>
