--- a/ISLT_4355/contact.html
+++ b/ISLT_4355/contact.html
@@ -50,10 +50,10 @@ Updated: July 21, 2022
     <main>
     <div class="contactcontainer">
         <h3>Contact us</h3>
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="action_page.php">
-            <label for="fname" class="fcf-label">Your name</label>
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+            <label for="Name" class="fcf-label">Your name</label>
             <div class="fcf-input-group">
-                <input type="text" id="fname" name="Name" class="fcf-form-control" required>
+                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
             </div>
         <div class="fcf-form-group">
             <label for="Email" class="fcf-label">Your email address</label>
