--- a/ISLT_4355/reflection.html
+++ b/ISLT_4355/reflection.html
@@ -42,7 +42,7 @@ Updated: July 3, 2022
                   </ul>
                 </li>
                 <li><a href="reflection.html">Reflection</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
         </nav>
     </header>
