--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -88,6 +88,27 @@ Updated: July 3, 2022
             </h2>
         </div>
       </div>
+      <table>
+        <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Job Title</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>James</td>
+            <td>Matman</td>
+            <td>Chief Sandwich Eater</td>
+        </tr>
+        <tr>
+            <td>The</td>
+            <td>Tick</td>
+            <td>Crimefighter Sorta</td>
+        </tr>
+        </tbody>
+    </table>
 </main>
 <footer>
     <div class="footercontainer">
