--- a/ISLT_4355/about.html
+++ b/ISLT_4355/about.html
@@ -89,26 +89,20 @@ Updated: July 3, 2022
         </div>
       </div>
       <table>
-        <thead>
+        <caption>Current Summer Curriculum</caption>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Job Title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>James</td>
-            <td>Matman</td>
-            <td>Chief Sandwich Eater</td>
+          <th>Course Number</th>
+          <th>Course Name</th>
         </tr>
         <tr>
-            <td>The</td>
-            <td>Tick</td>
-            <td>Crimefighter Sorta</td>
+          <td>ISLT_4355</td>
+          <td>Web Design and Development</td>
         </tr>
-        </tbody>
-    </table>
+        <tr>
+          <td>ISLT_4361</td>
+          <td>Intro to Digital Media</td>
+        </tr>
+      </table>
 </main>
 <footer>
     <div class="footercontainer">
