--- a/ISLT_4355/contact.html
+++ b/ISLT_4355/contact.html
@@ -22,30 +22,36 @@ Updated: July 21, 2022
 -->
                <meta charset="utf-8">
                <meta name="viewport" content="width=device-width, initial-scale=1">
-               <title>Home Page</title>
+               <title>Contact Page</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
                <link rel="shortcut icon" type="image/png" href="images/gtlogo.png">
 </head>
 <body class="parallax">
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="dropdown">
-                  <a href="project.html" class="dropbtn">Projects</a>
-                  <ul class="dropdown-content">
-                    <a href="project.html#target1">Project 1</a>
-                    <a href="project.html#target2">Project 2</a>
-                    <a href="project.html#target3">Project 3</a>
-                  </ul>
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="nav-logo">Grady Todd</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
-                <li><a href="reflection.html">Reflection</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
+                <li class="nav-item">
+                    <a href="project.html" class="nav-link">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a href="reflection.html" class="nav-link">Reflection</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
-    </header>
+</header>
 
     <main>
         <!--
@@ -102,5 +108,24 @@ Updated: July 21, 2022
             <p>Grady Todd ghtddc@umsystem.edu Copyright 2022 Grady Todd All Rights Reserved</p>
         </div>
     </footer>
+    <script>
+        const hamburger = document.querySelector(".hamburger");
+const navMenu = document.querySelector(".nav-menu");
+
+hamburger.addEventListener("click", mobileMenu);
+
+function mobileMenu() {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+}
+const navLink = document.querySelectorAll(".nav-link");
+
+navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+function closeMenu() {
+    hamburger.classList.remove("active");
+    navMenu.classList.remove("active");
+}
+    </script>
 </body>
 </html>
